@@ -68,15 +68,19 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
     private final List<Tuple<PluginInfo, Plugin>> plugins;
     private final PluginsAndModules info;
 
-    public static final Setting<List<String>> MANDATORY_SETTING =
-        Setting.listSetting("plugin.mandatory", Collections.emptyList(), Function.identity(), Property.NodeScope);
+    public static final Setting<List<String>> MANDATORY_SETTING = Setting.listSetting(
+        "plugin.mandatory",
+        Collections.emptyList(),
+        Function.identity(),
+        Property.NodeScope
+    );
 
     public List<Setting<?>> getPluginSettings() {
-        return plugins.stream().flatMap(p -> p.v2().getSettings().stream()).collect(Collectors.toList());
+        return plugins.stream().flatMap(p -> p.v2().getSettings().stream()).toList();
     }
 
     public List<String> getPluginSettingsFilter() {
-        return plugins.stream().flatMap(p -> p.v2().getSettingsFilter().stream()).collect(Collectors.toList());
+        return plugins.stream().flatMap(p -> p.v2().getSettingsFilter().stream()).toList();
     }
 
     /**
@@ -104,8 +108,20 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         // first we load plugins that are on the classpath. this is for tests
         for (Class<? extends Plugin> pluginClass : classpathPlugins) {
             Plugin plugin = loadPlugin(pluginClass, settings, configPath);
-            PluginInfo pluginInfo = new PluginInfo(pluginClass.getName(), "classpath plugin", "NA", Version.CURRENT, "1.8",
-                                                   pluginClass.getName(), Collections.emptyList(), false, PluginType.ISOLATED, "", false);
+            PluginInfo pluginInfo = new PluginInfo(
+                pluginClass.getName(),
+                "classpath plugin",
+                "NA",
+                Version.CURRENT,
+                "1.8",
+                pluginClass.getName(),
+                null,
+                Collections.emptyList(),
+                false,
+                PluginType.ISOLATED,
+                "",
+                false
+            );
             if (logger.isTraceEnabled()) {
                 logger.trace("plugin loaded from classpath [{}]", pluginInfo);
             }
@@ -164,10 +180,11 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
             }
             if (missingPlugins.isEmpty() == false) {
                 final String message = String.format(
-                        Locale.ROOT,
-                        "missing mandatory plugins [%s], found plugins [%s]",
-                        Strings.collectionToDelimitedString(missingPlugins, ", "),
-                        Strings.collectionToDelimitedString(pluginsNames, ", "));
+                    Locale.ROOT,
+                    "missing mandatory plugins [%s], found plugins [%s]",
+                    Strings.collectionToDelimitedString(missingPlugins, ", "),
+                    Strings.collectionToDelimitedString(pluginsNames, ", ")
+                );
                 throw new IllegalStateException(message);
             }
         }
@@ -183,7 +200,7 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         if (pluginInfos.isEmpty()) {
             logger.info("no " + type + "s loaded");
         } else {
-            for (final String name : pluginInfos.stream().map(PluginInfo::getName).sorted().collect(Collectors.toList())) {
+            for (final String name : pluginInfos.stream().map(PluginInfo::getName).sorted().toList()) {
                 logger.info("loaded " + type + " [" + name + "]");
             }
         }
@@ -197,8 +214,16 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
             for (String setting : settings.keySet()) {
                 String oldPlugin = foundSettings.put(setting, plugin.v1().getName());
                 if (oldPlugin != null) {
-                    throw new IllegalArgumentException("Cannot have additional setting [" + setting + "] " +
-                        "in plugin [" + plugin.v1().getName() + "], already added in plugin [" + oldPlugin + "]");
+                    throw new IllegalArgumentException(
+                        "Cannot have additional setting ["
+                            + setting
+                            + "] "
+                            + "in plugin ["
+                            + plugin.v1().getName()
+                            + "], already added in plugin ["
+                            + oldPlugin
+                            + "]"
+                    );
                 }
             }
             builder.put(settings);
@@ -298,11 +323,13 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         if (Files.exists(rootPath)) {
             try (DirectoryStream<Path> stream = Files.newDirectoryStream(rootPath)) {
                 for (Path plugin : stream) {
-                    if (FileSystemUtils.isDesktopServicesStore(plugin) ||
-                        plugin.getFileName().toString().startsWith(".removing-")) {
+                    final String filename = plugin.getFileName().toString();
+                    if (FileSystemUtils.isDesktopServicesStore(plugin)
+                        || filename.startsWith(".removing-")
+                        || filename.equals(".elasticsearch-plugins.yml.cache")) {
                         continue;
                     }
-                    if (seen.add(plugin.getFileName().toString()) == false) {
+                    if (seen.add(filename) == false) {
                         throw new IllegalStateException("duplicate plugin: " + plugin);
                     }
                     plugins.add(plugin);
@@ -317,8 +344,15 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
      */
     public static void verifyCompatibility(PluginInfo info) {
         if (info.getElasticsearchVersion().equals(Version.CURRENT) == false) {
-            throw new IllegalArgumentException("Plugin [" + info.getName() + "] was built for Elasticsearch version "
-                + info.getElasticsearchVersion() + " but version " + Version.CURRENT + " is running");
+            throw new IllegalArgumentException(
+                "Plugin ["
+                    + info.getName()
+                    + "] was built for Elasticsearch version "
+                    + info.getElasticsearchVersion()
+                    + " but version "
+                    + Version.CURRENT
+                    + " is running"
+            );
         }
         JarHell.checkJavaVersion(info.getName(), info.getJavaVersion());
     }
@@ -335,10 +369,11 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
                 final String fileName = removing.getFileName().toString();
                 final String name = fileName.substring(1 + fileName.indexOf("-"));
                 final String message = String.format(
-                        Locale.ROOT,
-                        "found file [%s] from a failed attempt to remove the plugin [%s]; execute [elasticsearch-plugin remove %2$s]",
-                        removing,
-                        name);
+                    Locale.ROOT,
+                    "found file [%s] from a failed attempt to remove the plugin [%s]; execute [elasticsearch-plugin remove %2$s]",
+                    removing,
+                    name
+                );
                 throw new IllegalStateException(message);
             }
         }
@@ -367,12 +402,7 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
             }
         }
 
-        logger.trace(
-            () -> "findBundles("
-                + type
-                + ") returning: "
-                + bundles.stream().map(b -> b.plugin.getName()).sorted().collect(Collectors.toList())
-        );
+        logger.trace(() -> "findBundles(" + type + ") returning: " + bundles.stream().map(b -> b.plugin.getName()).sorted().toList());
 
         return bundles;
     }
@@ -383,8 +413,10 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         try {
             info = PluginInfo.readFromProperties(plugin);
         } catch (final IOException e) {
-            throw new IllegalStateException("Could not load plugin descriptor for " + type +
-                                            " directory [" + plugin.getFileName() + "]", e);
+            throw new IllegalStateException(
+                "Could not load plugin descriptor for " + type + " directory [" + plugin.getFileName() + "]",
+                e
+            );
         }
         return new Bundle(info, plugin);
     }
@@ -408,8 +440,12 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
     }
 
     // add the given bundle to the sorted bundles, first adding dependencies
-    private static void addSortedBundle(Bundle bundle, Map<String, Bundle> bundles, LinkedHashSet<Bundle> sortedBundles,
-                                        LinkedHashSet<String> dependencyStack) {
+    private static void addSortedBundle(
+        Bundle bundle,
+        Map<String, Bundle> bundles,
+        LinkedHashSet<Bundle> sortedBundles,
+        LinkedHashSet<String> dependencyStack
+    ) {
 
         String name = bundle.plugin.getName();
         if (dependencyStack.contains(name)) {
@@ -440,7 +476,7 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         sortedBundles.add(bundle);
     }
 
-    private List<Tuple<PluginInfo,Plugin>> loadBundles(Set<Bundle> bundles) {
+    private List<Tuple<PluginInfo, Plugin>> loadBundles(Set<Bundle> bundles) {
         List<Tuple<PluginInfo, Plugin>> plugins = new ArrayList<>();
         Map<String, Tuple<Plugin, ClassLoader>> loaded = new HashMap<>();
         Map<String, Set<URL>> transitiveUrls = new HashMap<>();
@@ -465,8 +501,10 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
             .collect(Collectors.groupingBy(Tuple::v1, Collectors.mapping(Tuple::v2, Collectors.toList())));
         for (Tuple<PluginInfo, Plugin> pluginTuple : plugins) {
             if (pluginTuple.v2() instanceof ExtensiblePlugin) {
-                loadExtensionsForPlugin((ExtensiblePlugin) pluginTuple.v2(),
-                    extendingPluginsByName.getOrDefault(pluginTuple.v1().getName(), List.of()));
+                loadExtensionsForPlugin(
+                    (ExtensiblePlugin) pluginTuple.v2(),
+                    extendingPluginsByName.getOrDefault(pluginTuple.v1().getName(), List.of())
+                );
             }
         }
     }
@@ -514,8 +552,12 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         }
 
         if (constructor.getParameterCount() == 1 && constructor.getParameterTypes()[0] != plugin.getClass()) {
-            throw new IllegalStateException(extensionSignatureMessage(extensionClass, extensionPointType, plugin) +
-                ", not (" + constructor.getParameterTypes()[0].getName() + ")");
+            throw new IllegalStateException(
+                extensionSignatureMessage(extensionClass, extensionPointType, plugin)
+                    + ", not ("
+                    + constructor.getParameterTypes()[0].getName()
+                    + ")"
+            );
         }
 
         try {
@@ -526,14 +568,18 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
             }
         } catch (ReflectiveOperationException e) {
             throw new IllegalStateException(
-                "failed to create extension [" + extensionClass.getName() + "] of type [" + extensionPointType.getName() + "]", e
+                "failed to create extension [" + extensionClass.getName() + "] of type [" + extensionPointType.getName() + "]",
+                e
             );
         }
     }
 
     private static <T> String extensionSignatureMessage(Class<? extends T> extensionClass, Class<T> extensionPointType, Plugin plugin) {
-        return "signature of " + extensionConstructorMessage(extensionClass, extensionPointType) +
-            " must be either () or (" + plugin.getClass().getName() + ")";
+        return "signature of "
+            + extensionConstructorMessage(extensionClass, extensionPointType)
+            + " must be either () or ("
+            + plugin.getClass().getName()
+            + ")";
     }
 
     private static <T> String extensionConstructorMessage(Class<? extends T> extensionClass, Class<T> extensionPointType) {
@@ -557,8 +603,9 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
                 Set<URL> intersection = new HashSet<>(extendedPluginUrls);
                 intersection.retainAll(pluginUrls);
                 if (intersection.isEmpty() == false) {
-                    throw new IllegalStateException("jar hell! extended plugins " + exts +
-                                                    " have duplicate codebases with each other: " + intersection);
+                    throw new IllegalStateException(
+                        "jar hell! extended plugins " + exts + " have duplicate codebases with each other: " + intersection
+                    );
                 }
 
                 // jar hell check: extended plugins (so far) do not have jar hell with each other
@@ -569,8 +616,9 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
                 intersection = new HashSet<>(bundle.allUrls);
                 intersection.retainAll(pluginUrls);
                 if (intersection.isEmpty() == false) {
-                    throw new IllegalStateException("jar hell! duplicate codebases with extended plugin [" +
-                        extendedPlugin + "]: " + intersection);
+                    throw new IllegalStateException(
+                        "jar hell! duplicate codebases with extended plugin [" + extendedPlugin + "]: " + intersection
+                    );
                 }
 
                 // jar hell check: extended plugins (so far) do not have jar hell with implementation+spi of this plugin
@@ -644,9 +692,15 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
 
             Class<? extends Plugin> pluginClass = loadPluginClass(bundle.plugin.getClassname(), loader);
             if (loader != pluginClass.getClassLoader()) {
-                throw new IllegalStateException("Plugin [" + name + "] must reference a class loader local Plugin class ["
-                    + bundle.plugin.getClassname()
-                    + "] (class loader [" + pluginClass.getClassLoader() + "])");
+                throw new IllegalStateException(
+                    "Plugin ["
+                        + name
+                        + "] must reference a class loader local Plugin class ["
+                        + bundle.plugin.getClassname()
+                        + "] (class loader ["
+                        + pluginClass.getClassLoader()
+                        + "])"
+                );
             }
             Plugin plugin = loadPlugin(pluginClass, settings, configPath);
             loaded.put(name, Tuple.tuple(plugin, spiLoader));
@@ -673,7 +727,7 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         Codec.reloadCodecs(loader);
     }
 
-    private Class<? extends Plugin> loadPluginClass(String className, ClassLoader loader) {
+    private static Class<? extends Plugin> loadPluginClass(String className, ClassLoader loader) {
         try {
             return Class.forName(className, false, loader).asSubclass(Plugin.class);
         } catch (ClassNotFoundException e) {
@@ -681,7 +735,7 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         }
     }
 
-    private Plugin loadPlugin(Class<? extends Plugin> pluginClass, Settings settings, Path configPath) {
+    private static Plugin loadPlugin(Class<? extends Plugin> pluginClass, Settings settings, Path configPath) {
         final Constructor<?>[] constructors = pluginClass.getConstructors();
         if (constructors.length == 0) {
             throw new IllegalStateException("no public constructor for [" + pluginClass.getName() + "]");
@@ -699,11 +753,11 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         final Class<?>[] parameterTypes = constructor.getParameterTypes();
         try {
             if (constructor.getParameterCount() == 2 && parameterTypes[0] == Settings.class && parameterTypes[1] == Path.class) {
-                return (Plugin)constructor.newInstance(settings, configPath);
+                return (Plugin) constructor.newInstance(settings, configPath);
             } else if (constructor.getParameterCount() == 1 && parameterTypes[0] == Settings.class) {
-                return (Plugin)constructor.newInstance(settings);
+                return (Plugin) constructor.newInstance(settings);
             } else if (constructor.getParameterCount() == 0) {
-                return (Plugin)constructor.newInstance();
+                return (Plugin) constructor.newInstance();
             } else {
                 throw new IllegalStateException(signatureMessage(pluginClass));
             }
@@ -712,19 +766,19 @@ public class PluginsService implements ReportingService<PluginsAndModules> {
         }
     }
 
-    private String signatureMessage(final Class<? extends Plugin> clazz) {
+    private static String signatureMessage(final Class<? extends Plugin> clazz) {
         return String.format(
-                Locale.ROOT,
-                "no public constructor of correct signature for [%s]; must be [%s], [%s], or [%s]",
-                clazz.getName(),
-                "(org.elasticsearch.common.settings.Settings,java.nio.file.Path)",
-                "(org.elasticsearch.common.settings.Settings)",
-                "()");
+            Locale.ROOT,
+            "no public constructor of correct signature for [%s]; must be [%s], [%s], or [%s]",
+            clazz.getName(),
+            "(org.elasticsearch.common.settings.Settings,java.nio.file.Path)",
+            "(org.elasticsearch.common.settings.Settings)",
+            "()"
+        );
     }
 
     @SuppressWarnings("unchecked")
     public <T> List<T> filterPlugins(Class<T> type) {
-        return plugins.stream().filter(x -> type.isAssignableFrom(x.v2().getClass()))
-            .map(p -> ((T)p.v2())).collect(Collectors.toList());
+        return plugins.stream().filter(x -> type.isAssignableFrom(x.v2().getClass())).map(p -> ((T) p.v2())).toList();
     }
 }
