@@ -29,7 +29,6 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsInAnyOrder;
@@ -54,22 +53,19 @@ public class RestPluginsActionTests extends ESTestCase {
      */
     public void testIsolatedPluginOnly() {
         final Table table = buildTable(
-            List.of(
-                plugin("test-plugin", PluginType.ISOLATED),
-                plugin("ignored-plugin", PluginType.BOOTSTRAP)
-            ),
+            List.of(plugin("test-plugin", PluginType.ISOLATED), plugin("ignored-plugin", PluginType.BOOTSTRAP)),
             false
         );
 
         // verify the table headers are correct
-        final List<Object> headers = table.getHeaders().stream().map(h -> h.value).collect(Collectors.toList());
+        final List<Object> headers = table.getHeaders().stream().map(h -> h.value).toList();
         assertThat(headers, contains("id", "name", "component", "version", "description", "type"));
 
         // verify the table rows are correct
         final List<List<String>> rows = table.getRows()
             .stream()
-            .map(row -> row.stream().map(c -> String.valueOf(c.value)).collect(Collectors.toList()))
-            .collect(Collectors.toList());
+            .map(row -> row.stream().map(c -> String.valueOf(c.value)).toList())
+            .toList();
         assertThat(rows, hasSize(3));
 
         final List<Matcher<? super List<String>>> matchers = new ArrayList<>();
@@ -93,8 +89,8 @@ public class RestPluginsActionTests extends ESTestCase {
         // verify the table rows are correct
         final List<List<String>> rows = table.getRows()
             .stream()
-            .map(row -> row.stream().map(c -> String.valueOf(c.value)).collect(Collectors.toList()))
-            .collect(Collectors.toList());
+            .map(row -> row.stream().map(c -> String.valueOf(c.value)).toList())
+            .toList();
         assertThat(rows, hasSize(6));
 
         final List<Matcher<? super List<String>>> matchers = new ArrayList<>();
@@ -162,6 +158,6 @@ public class RestPluginsActionTests extends ESTestCase {
     }
 
     private PluginInfo plugin(String name, PluginType type) {
-        return new PluginInfo(name, name + " description", "1.0", null, null, null, List.of(), false, type, null, false);
+        return new PluginInfo(name, name + " description", "1.0", null, null, null, null, List.of(), false, type, null, false);
     }
 }
