@@ -6,11 +6,9 @@
  */
 package org.elasticsearch.xpack.security.rest.action.user;
 
-import org.elasticsearch.client.node.NodeClient;
-import org.elasticsearch.core.RestApiVersion;
+import org.elasticsearch.client.internal.node.NodeClient;
 import org.elasticsearch.common.settings.Settings;
-import org.elasticsearch.common.util.set.Sets;
-import org.elasticsearch.common.xcontent.XContentBuilder;
+import org.elasticsearch.core.RestApiVersion;
 import org.elasticsearch.license.XPackLicenseState;
 import org.elasticsearch.rest.BytesRestResponse;
 import org.elasticsearch.rest.RestRequest;
@@ -18,6 +16,7 @@ import org.elasticsearch.rest.RestRequestFilter;
 import org.elasticsearch.rest.RestResponse;
 import org.elasticsearch.rest.RestStatus;
 import org.elasticsearch.rest.action.RestBuilderListener;
+import org.elasticsearch.xcontent.XContentBuilder;
 import org.elasticsearch.xpack.core.XPackSettings;
 import org.elasticsearch.xpack.core.security.action.user.PutUserRequestBuilder;
 import org.elasticsearch.xpack.core.security.action.user.PutUserResponse;
@@ -25,7 +24,6 @@ import org.elasticsearch.xpack.core.security.authc.support.Hasher;
 import org.elasticsearch.xpack.security.rest.action.SecurityBaseRestHandler;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -48,9 +46,9 @@ public class RestPutUserAction extends SecurityBaseRestHandler implements RestRe
     public List<Route> routes() {
         return List.of(
             Route.builder(POST, "/_security/user/{username}")
-                .replaces(POST, "/_xpack/security/user/{username}", RestApiVersion.V_7).build(),
-            Route.builder(PUT, "/_security/user/{username}")
-                .replaces(PUT, "/_xpack/security/user/{username}", RestApiVersion.V_7).build()
+                .replaces(POST, "/_xpack/security/user/{username}", RestApiVersion.V_7)
+                .build(),
+            Route.builder(PUT, "/_security/user/{username}").replaces(PUT, "/_xpack/security/user/{username}", RestApiVersion.V_7).build()
         );
     }
 
@@ -61,9 +59,12 @@ public class RestPutUserAction extends SecurityBaseRestHandler implements RestRe
 
     @Override
     public RestChannelConsumer innerPrepareRequest(RestRequest request, NodeClient client) throws IOException {
-        PutUserRequestBuilder requestBuilder = new PutUserRequestBuilder(client)
-            .source(request.param("username"), request.requiredContent(), request.getXContentType(), passwordHasher)
-            .setRefreshPolicy(request.param("refresh"));
+        PutUserRequestBuilder requestBuilder = new PutUserRequestBuilder(client).source(
+            request.param("username"),
+            request.requiredContent(),
+            request.getXContentType(),
+            passwordHasher
+        ).setRefreshPolicy(request.param("refresh"));
 
         return channel -> requestBuilder.execute(new RestBuilderListener<>(channel) {
             @Override
@@ -74,7 +75,7 @@ public class RestPutUserAction extends SecurityBaseRestHandler implements RestRe
         });
     }
 
-    private static final Set<String> FILTERED_FIELDS = Collections.unmodifiableSet(Sets.newHashSet("password", "password_hash"));
+    private static final Set<String> FILTERED_FIELDS = Set.of("password", "password_hash");
 
     @Override
     public Set<String> getFilteredFields() {
